Correct overflow-wrap argument value

--- a/app/styles/utilities/_mixins.scss
+++ b/app/styles/utilities/_mixins.scss
@@ -6,5 +6,5 @@
 
 @mixin word-break() {
   word-wrap: break-word; // Non-standard name for overflow-wrap (Edge)
-  overflow-wrap: word-break; 
+  overflow-wrap: break-word; 
 }
